--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "node": ">=6"
   },
   "scripts": {
-    "start": "tsc -w --outDir ./dist/src",
-    "build": "tsc --outDir ./dist/src",
+    "start": "tsc -w",
+    "build": "tsc",
     "lint": "run-p tsc tslint",
     "tsc": "tsc --noEmit",
     "tslint": "tslint -c tslint.json src/*.ts",
     "standard-version": "standard-version",
-    "release": "run-s lint build standard-version"
+    "release": "run-s lint build standard-version",
+    "test": "mocha --require ts-node/register --watch-extensions ts test/**/*-test.ts"
   },
   "files": [
     "bin",
@@ -38,11 +39,14 @@
   "devDependencies": {
     "@types/chokidar": "^1.7.5",
     "@types/inquirer": "0.0.43",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.4",
     "@types/request-promise": "^4.1.42",
+    "mocha": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.2",
     "standard-version": "^4.4.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^3.0.3"
