--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,41 @@
+version: 2.1
 
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
-
-defaults: &defaults
-  working_directory: ~/repo
-
-  steps:
-    - checkout
-
-    # Download and cache dependencies
-    - restore_cache:
-        keys:
-        - v1-dependencies-{{ checksum "package-lock.json" }}
-        # fallback to using the latest cache if no exact match is found
-        - v1-dependencies-
-
-    - run: npm install
-
-    - save_cache:
-        paths:
-          - node_modules
-        key: v1-dependencies-{{ checksum "package-lock.json" }}
-
-    # run tests!
-    - run: npm run lint
-    - run: npm test
-
+commands:
+  run-npm-test:
+    steps:
+      - checkout
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package-lock.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
+      # run tests!
+      - run: npm run lint
+      - run: npm test
 jobs:
   node-v6:
-    <<: *defaults
     docker:
-      - image: circleci/node:6@sha256:b38a5515ee074ac77ad50818f3497b21f9831a002496c0bc9c250ec174598f20
+      - image: circleci/node:6@sha256:263ec29bc93d90443fc094e305437d6a42be707508dace108f171a6ded1d10e2
+    steps:
+      - run-npm-test
   node-v8:
-    <<: *defaults
     docker:
-      - image: circleci/node:8@sha256:4219ccbad0183162f3778ad43936b708f0eae50a6cfd87bc51790a6accd50f43
+      - image: circleci/node:8@sha256:8dc1d8ae2f295930fa165c36caab3c70cd8bee03c31f1205e1c45dfcdac68109
+    steps:
+      - run-npm-test
   node-v10:
-    <<: *defaults
     docker:
-      - image: circleci/node:10@sha256:aabdb1adfc81d76186e93563d5d786923477222dafdc5e0608d2637497eec8b3
+      - image: circleci/node:10@sha256:76f874d78a6316a3f431b70b86f45016753454654b6af5558d1a56750c54f9ba
+    steps:
+      - run-npm-test
 
 workflows:
-  version: 2
   multiple_builds:
     jobs:
       - node-v6
