chore(lint): lint test files

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "lint": "run-p tsc tslint",
     "tsc": "tsc --noEmit",
-    "tslint": "tslint -c tslint.json src/*.ts",
+    "tslint": "tslint -c tslint.json src/**/*.ts test/**/*.ts",
     "standard-version": "standard-version",
     "release": "run-s lint build standard-version",
     "test": "mocha --require ts-node/register --watch-extensions ts test/**/*-test.ts"
