--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.9",
     "@types/request-promise": "^4.1.42",
+    "@types/mkdirp": "^0.5.2",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.15.2",
@@ -55,6 +56,7 @@
     "chokidar": "^2.0.4",
     "inquirer": "^6.2.0",
     "meow": "^5.0.0",
+    "mkdirp": "^0.5.1",
     "os-locale": "^3.0.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
