--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@types/rimraf": "^2.0.2",
     "chokidar": "^2.0.4",
     "inquirer": "^6.2.0",
     "meow": "^5.0.0",
     "mkdirp": "^0.5.1",
     "os-locale": "^3.0.1",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "rimraf": "^2.6.2"
   }
 }
