--- a/sample/customize-manifest.json
+++ b/sample/customize-manifest.json
@@ -13,6 +13,9 @@
     "mobile": {
         "js": [
             "https://js.cybozu.com/jquery/3.3.1/jquery.min.js"
+        ],
+        "css": [
+          "sample/51-modern-default.css"
         ]
     }
 }
